fixed alignment and size of raves

--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -165,15 +165,15 @@ a.btn {
 		bottom: 15px;
 		right: 15px;
 		background: #000;
-		width: 50px;
-		height: 50px;
+		width: 40px;
+		height: 40px;
 		border-radius: 50%;
         opacity: 0.75;
 		font-size: 15px;
 		p{
             text-align: center;
             font-size: x-large;
-			margin-top: 15px;
+			margin-top: 12px;
             color: white;
             font-family: 'GothamThin';
 		}
@@ -215,15 +215,15 @@ a.btn {
         }
 		right: 15px;
 		background: #000;
-		width: 50px;
-		height: 50px;
+		width: 40px;
+		height: 40px;
 		border-radius: 50%;
         opacity: 0.75;
 		font-size: 15px;
 		p{
+            text-align: center;
             font-size: x-large;
-			margin-top: 15px;
-            padding-left: 18px;
+			margin-top: 12px;
             color: white;
             font-family: 'GothamThin';
 		}
